--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
     <main>
         <h1>Git and GitHub</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci asperiores at accusamus nostrum voluptate
+            obcaecati et soluta, deleniti necessitatibus velit exercitationem qui eveniet iste consequatur tenetur modi
+            aperiam ad pariatur.git
+        </p>
     </main>
 </body>
 
